--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 			<id>nowireless repo</id>
 			<url>http://nowireless.ignorelist.com:8080/plugin/repository/everything/</url>
 		</repository>
+		<repository>
+			<id>bukkit-repo</id>
+			<url>http://repo.bukkit.org/content/groups/public/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -34,7 +38,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>craftbukkit</artifactId>
-			<version>1.6.4-R0.1-SNAPSHOT</version>
+			<version>1.7.2-R0.3-SNAPSHOT</version>
 			</dependency>
 	</dependencies>
 	<build>
